--- a/package.json
+++ b/package.json
@@ -3,25 +3,49 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng build && node ./bin/app.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev": "concurrently --kill-others \"ng build --watch\" \"nodemon ./bin/app.js\""
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.3",
+    "@angular/cdk": "^6.2.0",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
+    "@angular/material": "^6.2.1",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "angular-compare-validator": "^0.2.0",
+    "bluebird": "^3.5.1",
+    "bootstrap": "^4.1.1",
+    "concurrently": "^3.6.0",
     "core-js": "^2.5.4",
+    "crypto": "^1.0.1",
+    "enum": "^2.5.0",
+    "express": "^4.16.3",
+    "express-fileupload": "^0.4.0",
+    "hammerjs": "^2.0.8",
+    "https": "^1.0.0",
+    "jquery": "^2.2.4",
+    "jsonwebtoken": "^8.3.0",
+    "material-design-icons": "^3.0.1",
+    "mongoose": "^5.1.7",
+    "ng2-charts": "^1.6.0",
+    "ngx-spinner": "^6.0.0",
+    "nodemailer": "^4.6.7",
+    "nodemon": "^1.17.5",
     "rxjs": "^6.0.0",
+    "svg-captcha": "^1.3.11",
+    "util": "^0.11.0",
+    "uuid": "^3.3.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
